crates/djls-project/tests/snapshots/settings_extraction__staticfiles_dirs_unknown_element_extracts_unknown_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values:
      - value: unknown
        span:
          start: 21
          length: 13
    extraction: partial
