crates/djls-project/tests/snapshots/settings_extraction__template_backend_spread_erases_prior_keys.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values:
    - blog
  extraction: full
templates:
  backends:
    - backend: ~
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      extraction: partial
  extraction: partial
