crates/djls-project/tests/snapshots/settings_extraction__template_backend_spread_keeps_prior_keys_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values:
    - blog
  extraction: complete
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs:
        - resolved: /proj/myproject/templates
      app_dirs: true
      libraries: []
      builtins: []
      context_processors: []
      extraction: partial
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
