crates/djls-project/tests/snapshots/settings_extraction__template_context_processors_mixed_invalid_entries_extract_partial.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      context_processors:
        - value: project.context_processors.site
          span:
            start: 267
            length: 33
        - value: project.context_processors.request
          span:
            start: 413
            length: 36
      extraction: partial
  extraction: partial
