crates/djls-project/tests/snapshots/settings_extraction__template_context_processors_non_list_extracts_partial_backend.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      context_processors: []
      extraction: partial
  extraction: partial
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
