crates/djls-project/tests/snapshots/settings_extraction__template_context_processors_same_branch_values_are_complete.snap
---
source: crates/djls-project/tests/settings_extraction.rs
assertion_line: 481
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs: []
      app_dirs: true
      libraries: []
      builtins: []
      context_processors:
        - value: project.context_processors.site
          span:
            start: 213
            length: 33
      extraction: complete
  extraction: complete
staticfiles:
  static_url:
    values: []
    extraction: partial
  static_root:
    values: []
    extraction: partial
  staticfiles_dirs:
    values: []
    extraction: partial
