crates/djls-project/tests/snapshots/settings_extraction__unknown_template_backend_spread_keeps_surrounding_keys.snap
---
source: crates/djls-project/tests/settings_extraction.rs
expression: "django_settings(&db, project)"
---
installed_apps:
  values:
    - blog
  extraction: full
templates:
  backends:
    - backend: django.template.backends.django.DjangoTemplates
      dirs:
        - resolved: /proj/myproject/templates
      app_dirs: true
      libraries: []
      builtins: []
      extraction: partial
  extraction: partial
