crates/djls-project/tests/snapshots/settings_extraction__unsupported_attribute_call_touching_both_known_settings_degrades_both.snap
---
source: crates/djls-project/tests/settings_extraction.rs
assertion_line: 337
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
