crates/djls-project/tests/snapshots/settings_extraction__unsupported_plain_call_touching_known_settings_degrades_them.snap
---
source: crates/djls-project/tests/settings_extraction.rs
assertion_line: 318
expression: "django_settings(&db, project)"
---
parse_status: parsed
installed_apps:
  values: []
  extraction: partial
templates:
  backends: []
  extraction: partial
